<resources>
    <string name="app_name">GradesApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_man_sci_second_year">Choose your module</string>
    <string name="main_button_2ndyear">Second Year</string>
    <string name="main_button_1styear">First Year</string>
    <string name="main_textview_chooseyear">Management Science: What year are you in?</string>
    <string name="modules_termOne">Term 1</string>
    <string name="modules_termTwo">Term 2</string>
    <string name="add_assignment">Add assignment</string>
    <string name="calculate_grades_needed">Calculate grades needed</string>
    <string name="main_button_viewModules">View modules</string>

    <!-- MODULES MANAGEMENT SCIENCE YEAR 1-->
    <!-- TERM 1 -->
    <string name="manSci_firstYear_MFOM1">MFOM I</string>
    <string name="manSci_firstYear_cat">Critical Analytical Thinking</string>
    <string name="manSci_firstYear_be1">Business Economics I</string>
    <string name="manSci_firstYear_asm">Art and Science of Management</string>
    <!-- TERM 2 -->
    <string name="manSci_firstYear_bs">Behavioural Science</string>
    <string name="manSci_firstYear_da1">Data Analytics I</string>
    <string name="manSci_firstYear_be2">Business Economics II</string>
    <string name="manSci_firstYear_MFOM2">MFOM II</string>

    <!-- MODULES MANAGEMENT SCIENCE YEAR 2 -->
    <!-- TERM 1 -->
    <string name="manSci_secondYear_MFOM3">MFOM III</string>
    <string name="manSci_secondYear_strategy">Strategy by Design</string>
    <string name="manSci_secondYear_CT">Computational Thinking</string>
    <string name="manSci_secondYear_finance">Finance I</string>
    <!-- TERM 2 -->
    <string name="manSci_secondYear_design">Design</string>
    <string name="manSci_secondYear_PTOM">PTOM</string>
    <string name="manSci_secondYear_DA">Data Analytics II</string>
    <string name="manSci_secondYear_minor">IEP Minor</string>

    <!-- Toolbar Names -->
    <!-- YEAR 2 -->
    <!-- TERM 1 -->
    <string name="title_activity_mfom3">Mathematical Foundations of Management III</string>
    <string name="title_activity_ct">Computational Thinking</string>
    <string name="title_activity_finance">Finance I</string>
    <string name="title_activity_strategy">Strategy by Design</string>
    <!-- TERM 2 -->
    <string name="title_activity_design">Design</string>
    <string name="title_activity_ptom">Product, Technology, and Operations Management</string>
    <string name="title_activity_da2">Data Analytics II</string>
    <string name="title_activity_minor">IEP Minor</string>
    <!-- YEAR 1 -->
    <!-- TERM 1 -->
    <string name="title_activity_mfom1">Mathematical Foundations of Management I</string>
    <string name="title_activity_cat">Critical Analytical Thinking</string>
    <string name="title_activity_asm">Art and Science of Management</string>
    <string name="title_activity_be1">Business Economics I</string>
    <!-- TERM 2 -->
    <string name="title_activity_bs">Behavioural Science</string>
    <string name="title_activity_da1">Data Analytics I</string>
    <string name="title_activity_mfom2">Mathematical Foundations of Management II</string>
    <string name="title_activity_be2">Business Economics II</string>

    <!-- Assignment Names -->
    <string name="assignment_1">Assignment 1</string>
    <string name="assignment_2">Assignment 2</string>
    <string name="assignment_3">Assignment 3</string>
    <string name="assignment_4">Assignment 4</string>
    <string name="assignment_5">Assignment 5</string>
    <string name="title_activity_man_sci_first_year">Choose your module</string>


    <!-- Grades and Weights -->
    <string name="weight">Weight (%)</string>
    <string name="grade">Grade</string>
    <string name="for_a_first">For a 1st: </string>
    <string name="for_a_twoOne">For a 2.1:</string>
    <string name="for_a_twoTwo">For a 2.2:</string>
    <string name="for_a_third">For a 3rd: </string>
    <string name="exam_grade_needed">Exam grade needed:</string>
    <string name="title_activity_view_modules">viewModules</string>


</resources>
