<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manSci_firstYear_asm_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mansci.gradesapp.manSciModules.asm"
    tools:showIn="@layout/modules_activity_asm">

    <Button
        android:id="@+id/manSci_firstYear_modules_asm_addAssignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/manSci_firstYear_modules_asm_gradeNeeded"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:onClick="addAssignment"
        android:text="@string/add_assignment" />

    <Button
        android:id="@+id/manSci_firstYear_button_strategy_calculateGrades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/manSci_firstYear_modules_asm_addAssignment"
        android:layout_toEndOf="@+id/manSci_firstYear_modules_asm_addAssignment"
        android:onClick="calculateGrades"
        android:text="@string/calculate_grades_needed" />

    <TextView
        android:id="@+id/manSci_firstYear_modules_asm_gradeNeeded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/exam_grade_needed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/manSci_firstYear_modules_asm_First"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/manSci_firstYear_modules_asm_gradeNeeded"
        android:text="@string/for_a_first"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/manSci_firstYear_modules_asm_twoOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/manSci_firstYear_modules_asm_First"
        android:text="@string/for_a_twoOne"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/manSci_firstYear_modules_asm_twoTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/manSci_firstYear_modules_asm_twoOne"
        android:text="@string/for_a_twoTwo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/manSci_firstYear_modules_asm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/manSci_firstYear_modules_asm_twoTwo"
        android:text="@string/for_a_third"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/manSci_firstYear_modules_asm_First_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/manSci_firstYear_modules_asm_First"
        android:layout_toEndOf="@id/manSci_firstYear_modules_asm_First"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/manSci_firstYear_modules_asm_twoOne_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/manSci_firstYear_modules_asm_twoOne"
        android:layout_alignLeft="@id/manSci_firstYear_modules_asm_First_grade"
        android:layout_toEndOf="@id/manSci_firstYear_modules_asm_twoOne"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/manSci_firstYear_modules_asm_twoTwo_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/manSci_firstYear_modules_asm_twoTwo"
        android:layout_alignLeft="@id/manSci_firstYear_modules_asm_First_grade"
        android:layout_toEndOf="@id/manSci_firstYear_modules_asm_twoTwo"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/manSci_firstYear_modules_asm_pass_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/manSci_firstYear_modules_asm_pass"
        android:layout_alignLeft="@id/manSci_firstYear_modules_asm_First_grade"
        android:layout_toEndOf="@id/manSci_firstYear_modules_asm_pass"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
